2006-02-15  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/frconvert-dialog.glade:
	  Changed convert_button's response to gtk.RESPONSE_OK.

	* data/glade/shift-dialog.glade:
	  Removed icon from shift_button.

	* data/ui/menubar.xml:
	  Added convert_framerate menu item.

	* gaupol:
	* trantool:
	  Cosmetic changes to option parser.

	* lib/gaupol/base/delegates/timing.py:
	  (TimingDelegate.revert_framerate_conversion): Modified to be more
	  independent and non-broken. Fixed references.

	* lib/gaupol/gtk/delegates/timing.py:
	  Added framerate conversion.

	* lib/gaupol/gtk/util/config.py:
	  (framerate_convert): New class.

	* setup.py:
	  Fixed description capitalization.

2006-02-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* setup.py:
	  Cosmetic fixes.

2006-02-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/adjust-dialog.glade:
	  Made dialog more vertical.

	* lib/gaupol/base/delegates/__init__.py:
	  Removed frconv from list of modules.

	* lib/gaupol/base/delegates/timing.py:
	  Implemented framerate conversion.

2006-02-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegates/frconv.py:
	* lib/gaupol/base/delegates/timing.py:
	  Moved all stuff from frconv.py to timing.py.
	  Removed file frconv.py.

2006-02-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/frconvert-dialog.glade:
	  New file.

	* data/glade/language-dialog.glade:
	  Moved list to top and target to bottom.

2006-02-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegates/filesave.py:
	  (FileSaveDelegate._remove_backup_file): Removed failure logging.
	  (FileSaveDelegate._save_file): Use tempfile.mkstemp to create backup
	  file.

	* lib/gaupol/base/delegates/preview.py:
	  Cosmetic changes.

	* lib/gaupol/test/__init__.py:
	  (Test.get_micro_dvd_path, Test.get_subrip_path): Use os.fdopen after
	  tempfile.mkstemp.

2006-02-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/shift-dialog.glade:
	  Fixed typo.

	* lib/gaupol/gtk/dialogs/adjust.py: